--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jade": "~1.11.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
