--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "luxon": "^3.4.4",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "morgan": "~1.9.1",
